update doc